--- a/weather-app.css
+++ b/weather-app.css
@@ -23,7 +23,7 @@ input[type="button"]:hover {
     background-color: #333;
 }
 body {
-    background-image: url("sunny-weather.jpg");
+    background-image: url("images/sunny-weather.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
